`strip_html` is cleaner

--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -2,11 +2,7 @@
     <div class="section">
         <div class="row auto-eg-padding">
       <div class=" row twelve columns">
-        {% if example.name contains '<code>'%}
-          <h3 id="{{ example.name | remove: '<code>' | remove: '</code>' | remove:'<br>' | remove:',' | replace:' ','-' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | remove: '<code>' | remove: '</code>' | remove:',' | remove:'<br>'| replace:' ','-' | downcase }}">{{ example.name }}</a></h3>
-        {% else%}
-          <h3 id="{{ example.name | replace:' ','-' | remove:'<br>' | remove:',' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:'<br>' | remove:',' | downcase }}">{{ example.name }}</a></h3>
-        {% endif %}
+        <h3 id="{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}">{{ example.name }}</a></h3>
       </div>
       <div class="row">
         <div class="six columns">
