"bio" -> "science" per plotly.js team's request

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -5,8 +5,8 @@
     {% assign stats_charts = true %}   
   {% elsif page.display_as == "maps" %}
     {% assign maps = true %}    
-  {% elsif page.display_as == "bio_charts" %}
-    {% assign bio_charts = true %} 
+  {% elsif page.display_as == "science_charts" %}
+    {% assign science_charts = true %} 
   {% elsif page.display_as == "3d_charts" %}
     {% assign 3d_charts = true %}     
   {% elsif page.display_as == "multiple_axes" %}
@@ -87,11 +87,11 @@
   </div>
 {% endif %}
 
-{% if bio_charts %}
-<h3 id="bio-charts"><a class="no_underline plot-blue" href="#bio-charts">Bio Charts</a></h3>
+{% if science_charts %}
+<h3 id="science-charts"><a class="no_underline plot-blue" href="#science-charts">Scientific Charts</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
-      {% if page.display_as == "bio_charts" %}
+      {% if page.display_as == "science_charts" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
