add streaming back to index

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -2,17 +2,15 @@
   {% if page.display_as == "chart_type" %}
     {% assign chart_type = true %}
   {% elsif page.display_as == "stats_charts" %}
-    {% assign stats_charts = true %}   
+    {% assign stats_charts = true %}
   {% elsif page.display_as == "maps" %}
-    {% assign maps = true %}    
+    {% assign maps = true %}
   {% elsif page.display_as == "science_charts" %}
-    {% assign science_charts = true %} 
+    {% assign science_charts = true %}
   {% elsif page.display_as == "3d_charts" %}
-    {% assign 3d_charts = true %}     
+    {% assign 3d_charts = true %}
   {% elsif page.display_as == "multiple_axes" %}
     {% assign multiple_axes = true %}
-  {% elsif page.display_as == "streaming" %}
-    {% assign streaming = true %}
   {% endif %}
 {% endfor %}
 
@@ -123,22 +121,18 @@
   </div>
 {% endif %}
 
-{% if streaming %}
+{% if page.language == "matlab" or page.language == "python" %}
   <h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
     <div class="row">
-      {% for page in languagelistimg %}
-        {% if page.display_as == "streaming" %}
-            {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
-              <div class="alltutcol">
-                <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                <div class="titlecenter">
-                      <h5 class="centered"> {{page.name}} </h5>
-                </div>
-              </div>
-            </a>
-        {% endif %}
-      {% endfor %}
-    </div>
+      {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
+        <div class="alltutcol">
+          <img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
+          <div class="titlecenter">
+                <h5 class="centered"> Real-Time Streaming </h5>
+          </div>
+        </div>
+      </a>
+  </div>
 {% endif %}
 
 {% if layout_options %}
