--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -5,7 +5,7 @@
 	</div>
 </div>
 
-{% if page.language == 'MATLAB' or page.language == 'Python' %}
+{% if page.language == "matlab" or page.language == "python" %}
 	<div style="
     		background-image: url(https://plot.ly/gh-pages/documentation/static//images/banner-bar.png);
     		height: 256px; text-align: center;">
