--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -5,9 +5,10 @@
 	</div>
 </div>
 
-{% if page.language == "matlab" or page.language == "python" %}
-	<div style="
-    		background-image: url(https://plot.ly/gh-pages/documentation/static//images/banner-bar.png);
-    		height: 256px; text-align: center;">
-	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;">
-{% endif %}
+
+<div style="
+    	background-image: url(https://plot.ly/gh-pages/documentation/static//images/banner-bar.png);
+    	height: {% if page.language == "matlab" or page.language == "python" %}256px; {% else %}0px {% endif %}
+    	text-align: center;">
+<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;">
+
