--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -11,5 +11,5 @@
     	height: {% if page.language == "matlab" or page.language == "python" %}256px; {% else %}0px {% endif %}
     	text-align: center;">
 	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
-<div>
+</div>
 
