--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -10,6 +10,8 @@
   display: none;}
 .centered{
   text-align: center;}
+h1.centered{
+  padding:0;margin-top:-20px;}
 .no_underline{
   text-decoration: none;}
 .padding_left_small{
