--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,11 +8,13 @@
 		
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
+				{% if page.language == "matlab" or page.language == "python" %}
 				<div style="text-align: center;position: relative;top: -210px;">					
   					<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
 					<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for $999/year</h5>
 					<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab{% elsif page.language == "python" %}plotly-offline-ipython{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 				</div>
+				{% endif %}
 				
 				<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
 				{% include lang-navigation.html %}
