--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
 		
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
-				{% if page.language == "matlab" or page.language == "python" %}
+				{% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" %}
 				<div style="text-align: center;position: relative;top: -210px;">					
   					<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
 					<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for $999/year</h5>
