--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -11,7 +11,7 @@
 .centered{
   text-align: center;}
 h1.centered{
-  padding:0;margin-top:-20px;}
+  padding:0;}
 .no_underline{
   text-decoration: none;}
 .padding_left_small{
