--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -17,7 +17,7 @@
         </div>
         <div class="six columns">
           <div class="border">
-            <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed"{% endif %} style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
+            <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed{% endif %}" style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
           </div>
         </div>
       </div>
