--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -5,7 +5,7 @@
         <h3 id="{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}">{{ example.name }}</a></h3>
       </div>
       <div class="row">
-        <div class="six columns">
+        <div class="{% if example.layout=='horizontal' %}twelve{% else %}six columns">
           <div class="z-depth-1">
             <pre><code class="{{page.language}}">{{ example.content }}</code></pre>
           </div>
