--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -5,7 +5,7 @@
         <h3 id="{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:',' | downcase | strip_html }}">{{ example.name }}</a></h3>
       </div>
       <div class="row">
-        <div class="{% if example.layout=='horizontal' %}twelve{% else %}six{% endif %} columns">
+        <div class="{% if example.arrangement=='horizontal' %}twelve{% else %}six{% endif %} columns">
           <div class="z-depth-1">
             <pre><code class="{{page.language}}">{{ example.content }}</code></pre>
           </div>
@@ -15,7 +15,7 @@
             </blockquote>
           {% endif %}
         </div>
-        <div class="{% if example.layout=='horizontal' %}twelve{% else %}six{% endif %} columns">
+        <div class="{% if example.arrangement=='horizontal' %}twelve{% else %}six{% endif %} columns">
           <div class="border">
             <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed{% endif %}" style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
           </div>
