--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -635,23 +635,29 @@ API SPLASH
 **************/
 
 .api-splash{
-	background-image:url('https://plot.ly/static/img/api_splash.jpg');
+	background-image:url('https://plot.ly/static/img/unemployment.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	max-width: 100%;
 	height: 300px;
-	padding: 40px 0px 0px 10px;
+	padding: 0px;
 	background-position: center top;
+}
+.api-splash-mute{
+    height: 100%;
+    width: 100%;
+    background-image: -webkit-gradient(  linear, left top, left bottom, from(rgba(50,50,50,0.8)),  to(rgba(0,0,0,0)), color-stop(0,#333333));
 }
 .api-splash h1{
 	margin-top: 0px;
 	margin-bottom: 20px;
 	margin-left: 10px;
-	text-shadow: 1px 1px 10px #000;
+	color: white;
+	text-align: center;
 }
-.api-splash h4{
-	margin-left: 10px;
-	text-shadow: 1px 1px 10px #000;
+.api-splash h3{
+	color: white;
+	text-align: center;
 }
 .api-sect-padding{
 	padding-top: 40px;
