--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -635,7 +635,7 @@ API SPLASH
 **************/
 
 .api-splash{
-	background-image:url('https://plot.ly/static/img/unemployment.png');
+	background-image:url('https://raw.githubusercontent.com/plotly/documentation/gh-pages/all_static/images/unemployment.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	max-width: 100%;
