--- a/_includes/first-header.html
+++ b/_includes/first-header.html
@@ -1,4 +1,4 @@
-<div class="headerbar transbar">
+<div class="headerbar">
 
     <div class="headerbar-leftside">
         <a href="https://plot.ly/feed/" class="logo">
@@ -19,19 +19,19 @@
 
   <div class="headerbar-nav hidesmall">
       <a href="https://plot.ly/plot" class="link --headerbar" target="_self">
-      <span class="headerbar-nav-item transbar-link">Workspace</span>
+      <span class="headerbar-nav-item">Workspace</span>
       </a>
   
       <a href="https://plot.ly/feed/" class="link --headerbar" target="_self">
-      <span class="headerbar-nav-item transbar-link">Explore</span>
+      <span class="headerbar-nav-item">Explore</span>
       </a>
   
       <a href="https://plot.ly/api/" class="link --headerbar" target="_self">
-      <span class="headerbar-nav-item transbar-link">API</span>
+      <span class="headerbar-nav-item">API</span>
       </a>
   
       <a href="https://plot.ly/product/enterprise/" class="link --headerbar" target="_blank">
-      <span class="headerbar-nav-item transbar-link">Enterprise</span>
+      <span class="headerbar-nav-item">Enterprise</span>
       </a>
   </div>
   
