--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -898,3 +898,12 @@ GETTING STARTED STYLING
 .terminal{
 
 }
+
+/***********************
+PLOTLY.JS VERSION NUMBER
+************************/
+.version-number{
+	margin-top: 10px;
+    	color: white;
+    	opacity: 0.6;
+}
