--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -13,4 +13,11 @@
     	text-align: center;">
 	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
 </div>
+{% elsif page.language == "plotly_js" %}
+<div style="
+    	background-image: url(https://plot.ly/gh-pages/documentation/static//images/plotlyjs-background-1.png);
+    	height: 350px; 
+    	text-align: center;">
+	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
+</div>
 {% endif %}
