--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -907,3 +907,10 @@ PLOTLY.JS VERSION NUMBER
     	color: white;
     	opacity: 0.6;
 }
+
+.plotlyjs-download{
+	text-decoration: none;
+	font-size: 18px;
+	display: inline-block;
+	padding: 12px 24px;
+}
