--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -32,7 +32,19 @@
 
 
 {% if chart_type %}
-<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a></h3>
+  <h3 id="basic-charts">
+    {% if page.language == "plotly_js" %}
+      <a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank">
+		    <i class="fa fa-download fa-lg"></i> Download
+	    </a>
+	  {% endif %}
+    <a class="no_underline plot-blue" href="#basic-charts">
+      Basic Charts
+    </a>
+  </h3>
+  {% if page.language == "plotly_js" %}
+    <p>The Plotly.js Basic Charts module is free for unlimited use if all links and references to Plotly remain visible and unmodified.</p>
+  {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "chart_type" %}
@@ -49,8 +61,14 @@
   </div>
 {% endif %}
 
-{% if stats_charts %}
-<h3 id="stats-charts"><a class="no_underline plot-blue" href="#stats-charts">Stats Charts</a></h3>
+{% if advanced_charts %}
+<h3 id="advanced-charts">
+  <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$250/developer/year</a>
+  <a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
+</h3>
+{% if page.language == "plotly_js" %}
+  <p>All the charts in <a href="#basic-charts">Basic Charts</a>, plus these:</p>
+{% endif %}
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "stats_charts" %}
@@ -85,26 +103,16 @@
   </div>
 {% endif %}
 
-{% if science_charts %}
-<h3 id="science-charts"><a class="no_underline plot-blue" href="#science-charts">Scientific Charts</a></h3>
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "science_charts" %}
-              <a href="/{{page.permalink}}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endif %}
-
 {% if 3d_charts %}
-<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">3d Charts</a></h3>
+<h3 id="3d-charts">
+  {% if page.language == "plotly_js" %}
+    <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$995/developer/year</a>
+  {% endif %}
+  <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
+</h3>
+{% if page.language == "plotly_js" %}
+  <p>All the charts in Basic and Advanced, plus these:</p>
+{% endif %}
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "3d_charts" %}
