--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,15 @@
 					<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for $999/year</h5>
 					<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab{% elsif page.language == "python" %}plotly-offline-ipython{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 				</div>
+				{% elsif page.language == "plotly_js" %}
+				<div style="text-align: center;position: relative;top: -300px;">					
+  					<h1 class="centered" style="color: white;margin-bottom: 20px;">plotly.js</h1>
+					<h5 style="color: white;">the premier charting library for the web</h5>
+					<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank">
+						<i class="fa fa-download fa-lg"></i> Download
+					</a>
+					<p class="centered version-number">20150720a_basic</p>
+				</div>
 				{% endif %}
 				
 				<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
