--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -34,16 +34,14 @@
 {% if chart_type %}
   <h3 id="basic-charts">
     {% if page.language == "plotly_js" %}
+      <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
       <a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank">
-		    <i class="fa fa-download fa-lg"></i> Download
-	    </a>
-	  {% endif %}
-    <a class="no_underline plot-blue" href="#basic-charts">
-      Basic Charts
-    </a>
+	<i class="fa fa-download fa-lg"></i> Download
+      </a>
+    {% endif %}
   </h3>
   {% if page.language == "plotly_js" %}
-    <p>The Plotly.js Basic Charts module is free for unlimited use if all links and references to Plotly remain visible and unmodified.</p>
+    <h5>Plotly.js Basic Charts is free for unlimited use if all links and references to Plotly remain visible and unmodified.</h5>
   {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
@@ -63,8 +61,8 @@
 
 {% if advanced_charts %}
 <h3 id="advanced-charts">
-  <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$250/developer/year</a>
   <a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
+  <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$250/developer/year</a>
 </h3>
 {% if page.language == "plotly_js" %}
   <p>All the charts in <a href="#basic-charts">Basic Charts</a>, plus these:</p>
@@ -111,7 +109,7 @@
   <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
 </h3>
 {% if page.language == "plotly_js" %}
-  <p>All the charts in Basic and Advanced, plus these:</p>
+  <h5>All the charts in Basic and Advanced, plus these:</h5>
 {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
