--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -1,12 +1,10 @@
 {% for page in languagelistimg %}
   {% if page.display_as == "chart_type" %}
     {% assign chart_type = true %}
-  {% elsif page.display_as == "stats_charts" %}
-    {% assign stats_charts = true %}
+  {% elsif page.display_as == "advanced_charts" %}
+    {% assign advanced_charts = true %}
   {% elsif page.display_as == "maps" %}
     {% assign maps = true %}
-  {% elsif page.display_as == "science_charts" %}
-    {% assign science_charts = true %}
   {% elsif page.display_as == "3d_charts" %}
     {% assign 3d_charts = true %}
   {% elsif page.display_as == "multiple_axes" %}
