--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -67,7 +67,7 @@
 {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
-      {% if page.display_as == "stats_charts" %}
+      {% if page.display_as == "advanced_charts" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
@@ -101,10 +101,10 @@
 
 {% if 3d_charts %}
 <h3 id="3d-charts">
+  <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
   {% if page.language == "plotly_js" %}
     <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$995/developer/year</a>
   {% endif %}
-  <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
 </h3>
 {% if page.language == "plotly_js" %}
   <h5>All the charts in Basic and Advanced, plus these:</h5>
