--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -65,7 +65,7 @@
   <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$250/developer/year</a>
 </h3>
 {% if page.language == "plotly_js" %}
-  <p>All the charts in <a href="#basic-charts">Basic Charts</a>, plus these:</p>
+  <h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
 {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
@@ -111,7 +111,7 @@
   {% endif %}
 </h3>
 {% if page.language == "plotly_js" %}
-  <h5>All the charts in Basic and Advanced, plus these:</h5>
+  <h5>All charts in Basic and Advanced, plus these:</h5>
 {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
