--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -62,7 +62,7 @@
 <hr>
 <h3 id="advanced-charts">
   <a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
-  <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$250/developer/year</a>
+  <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$249/developer/year</a>
 </h3>
 {% if page.language == "plotly_js" %}
   <h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
@@ -107,7 +107,7 @@
 <h3 id="3d-charts">
   <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
   {% if page.language == "plotly_js" %}
-    <a class="button plotlyjs-download" href="https://plot.ly/product/enterprise/get-in-touch/">$995/developer/year</a>
+    <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$995/developer/year</a>
   {% endif %}
 </h3>
 {% if page.language == "plotly_js" %}
