--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -34,7 +34,7 @@
   <h3 id="basic-charts">
   <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
     {% if page.language == "plotly_js" %}
-      <a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank">
+      <a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track("PlotlyJS Download",{ "Location": "Basic Charts" });">
 	<i class="fa fa-download fa-lg"></i> Download
       </a>
     {% endif %}
@@ -66,6 +66,7 @@
 </h3>
 {% if page.language == "plotly_js" %}
   <h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
+  <p>Advanced Chart developers also have right to remove Plotly links and references on charts.</p>
 {% endif %}
   <div class="row">
     {% for page in languagelistimg %}
