--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -19,7 +19,7 @@
 					<div style="text-align: center;position: relative;top: -300px;">					
   						<h1 class="centered" style="color: white;margin-bottom: 20px;">plotly.js</h1>
 						<h5 style="color: white;">the premier charting library for the web</h5>
-						<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track("PlotlyJS Download",{ "Location": "Getting Started" });">
+						<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Getting Started' });">
 							<i class="fa fa-download fa-lg"></i> Download
 						</a>
 						<p class="centered version-number">20150720a_basic</p>
