--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -6,9 +6,16 @@
       </div>
       <div class="row">
         <div class="{% if example.arrangement contains 'horizontal' %}twelve{% else %}six{% endif %} columns">
+          {% if example.language contains 'plotly_js' %}<h4 style="margin: 40px 0 0 0;">JavaScript</h4>{% endif %}
           <div class="z-depth-1">
             <pre><code class="{{page.language}}">{{ example.content }}</code></pre>
           </div>
+          {% if example.language contains 'plotly_js' %}
+          <div class="z-depth-1">
+            <h4 style="margin: 40px 0 0 0;">HTML</h4>
+            <pre><code class=".html .hljs-doctype">{% include plotlyjs_html.html %}</code></pre>
+          </div>
+          {% endif %}          
           {% if example.description %}
             <blockquote>
               {{ example.description }}
