--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -11,7 +11,7 @@
             <pre><code class="{{page.language}}">{{ example.content }}</code></pre>
           </div>
           {% if example.language contains 'plotly_js' %}
-          <div class="z-depth-1">
+          <div class="z-depth-1" style="background-color:rgb(239,241,245)">
             <h4 style="margin: 40px 0 0 0;">HTML</h4>
             <pre><code class=".html .hljs-doctype">{% include plotlyjs_html.html %}</code></pre>
           </div>
