--- a/_includes/plotlyjs_html.html
+++ b/_includes/plotlyjs_html.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html> 
-<head>
-  <!-- D3.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-  <!-- jQuery -->  
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <!-- Plotly.js -->   
-  <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
-</head>
-<body>
-<!-- Plotly chart will be drawn inside this DIV -->
-<div id="myDiv"></div>
-  <script>
+&lt;!DOCTYPE html&gt; 
+&lt;head&gt;
+  &lt;!-- D3.js --&gt;
+  &lt;script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"&gt;&lt;/script&gt;
+  &lt;!-- jQuery --&gt;  
+  &lt;script src="https://code.jquery.com/jquery-2.1.4.min.js"&gt;&lt;/script&gt;
+  &lt;!-- Plotly.js --&gt;   
+  &lt;script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;!-- Plotly chart will be drawn inside this DIV --&gt;
+&lt;div id="myDiv"&gt;&lt;/div&gt;
+  &lt;script&gt;
   /* JAVASCRIPT CODE GOES HERE */
-  </script>
-</body>
-</html>
+  &lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
