--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -11,9 +11,9 @@
             <pre><code class="{{page.language}}">{{ example.content }}</code></pre>
           </div>
           {% if example.language contains 'plotly_js' %}
+          <h4 style="margin: 40px 0 0 0;">HTML</h4>
           <div class="z-depth-1">
-            <h4 style="margin: 40px 0 0 0;">HTML</h4>
-            <pre style="background-color:rgb(239,241,245)"><code class=".html .hljs-doctype">{% include plotlyjs_html.html %}</code></pre>
+            <pre style="background-color:rgb(239,241,245)"><code class=".html .hljs-doctype" style="background-color:rgb(239,241,245)">{% include plotlyjs_html.html %}</code></pre>
           </div>
           {% endif %}          
           {% if example.description %}
