--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -22,7 +22,7 @@
 						<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Getting Started' });">
 							<i class="fa fa-download fa-lg"></i> Download
 						</a>
-						<p class="centered version-number">20150720a_basic</p>
+						<p class="centered version-number">version 20150720a_basic</p>
 					</div>
 					{% endif %}
 					
