ahhhh new ipython notebook css

--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -3,7 +3,8 @@
 	{% include head.html %}
 	<head>
 	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/userguide_style.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython-notebook-base.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython-notebook-custom.css">
 	</head>
 
 	<body>
@@ -22,9 +23,7 @@
 					</div>
 					{% endif %}
 
-					<div class="row">
 						{{ content }}
-					</div>
 				</div>
 			</div>
 		</div>
