--- a/all_static/css/ipython-notebook-custom.css
+++ b/all_static/css/ipython-notebook-custom.css
@@ -12,8 +12,8 @@
 }
 .cell .text_cell_render h1 {
     font-weight: 300;
-    font-size: 65px;
-    line-height: 66px;
+    font-size: 50px;
+    line-height: 55px;
     letter-spacing: -0.25px;
     color: #0089fe;
     margin-bottom: 0em;
@@ -27,8 +27,9 @@
 }
 .cell .text_cell_render h2 {
     font-weight: 300;
-    font-size: 48px;
-    line-height: 49px;
+    font-size: 42px;
+    font-style: normal;
+    line-height: 47px;
     color:#0089fe;
     display: block;
     white-space: nowrap;
@@ -40,7 +41,7 @@
 .cell .text_cell_render h3 {
     font-weight: 300;
     font-size: 36px;
-    line-height: 37px;
+    line-height: 40px;
     color:#0089fe;
     display: block;
     white-space: nowrap;
@@ -51,8 +52,8 @@
 }
 .cell .text_cell_render h4 {
     font-weight: 300;
-    font-size: 21px;
-    line-height: 22px;
+    font-size: 30px;
+    line-height: 33px;
     color:#0089fe;
     display: block;
     white-space: nowrap;
@@ -64,13 +65,13 @@
 }
 .cell .text_cell_render h5 {
     font-weight: 300;
-    font-size: 28px;
-    line-height: 35px;
-    color:#1e3a7b;
+    font-size: 24px;
+    line-height: 26px;
+    color:#0089fe;
     display: block;
     white-space: nowrap;
-    font-style: normal;
     margin: 0;
+    font-style: normal;
 }
 
 .cell h6 {
@@ -78,12 +79,13 @@
 }
 .cell .text_cell_render h6 {
     font-weight: 300;
-    font-size: 20px;
-    line-height: 25px;
-    color:#1e3a7b;
+    font-size: 18px;
+    line-height: 20px;
+    color:#0089fe;
+    font-style: normal;
     display: block;
     white-space: nowrap;
-    font-style: normal;
+    margin: 0;
 }
 
 .cell div.text_cell_render{
@@ -92,13 +94,24 @@
     text-align:justify;
     text-justify:inter-word;
     color: #1e4a7b;
-}
-.cell div.text_cell_render p{
     font-weight: 300;
     font-size: 18px;
     line-height: 25px;
-    color: #1e3a7b;
 }
+.cell div.text_cell_render p{
+    color: #1e4a7b;
+    font-size: 18px;
+    line-height: 25px;
+
+}
+.cell.code_cell{
+    font-size: 14px;
+}
+
+.cell code {
+  color: #1e4a7b;
+}
+
 .cell div.output_subarea.output_text.output_pyout {
     overflow-x: auto;
     overflow-y: scroll;
@@ -115,9 +128,7 @@
   /*  overflow-y: scroll; */
   /*  max-height: 300px;   */
 }
-.cell code{
-  font-size: 78%;
-}
+
 .cell .rendered_html code{
     background-color: transparent;
     white-space: inherit;
@@ -153,24 +164,26 @@
     margin-bottom: 0.5em;
     margin-top: 0.2em;
 }
+.cell a{
+  font-weight: bold;
+}
+.cell a.prompt {
+  text-decoration: initial;
+  font-weight: normal;
+}
 .cell a:link{
-   font-weight: bold;
    color:#265cc3;
 }
 .cell a:visited{
-   font-weight: bold;
    color: #1d3b84;
 }
 .cell a:hover{
-   font-weight: bold;
    color: #1d3b84;
 }
 .cell a:focus{
-   font-weight: bold;
    color:#265cc3;
 }
 .cell a:active{
-   font-weight: bold;
    color:#265cc3;
 }
 .cell .rendered_html :link {
@@ -209,5 +222,4 @@
     margin-bottom: 0;
     line-height: 125%;
     font-size: 100%;
-    text-align: center;
   }
