--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -14,21 +14,25 @@ background-color: #ffffff;
 code, kbd, pre, samp {
   font-family: monospace, monospace;
   font-size: 1em;
-  padding: 10px;}
-  
+  padding: 3px;}
+
+code {
+	white-space: pre;
+}
+
  pre, blockquote {
     margin-bottom: 0;}
 
 iframe{
 	min-width: 100%;
 	border: 0px;
-}	
-	
+}
+
 .border{
 	border: 1px solid #ccc;
 	background-color: #ffffff;
 }
-  
+
 .auto-eg-padding{
 	padding-top: 20px;
 	padding-bottom: 20px;}
