--- a/all_static/css/base.css
+++ b/all_static/css/base.css
@@ -50,7 +50,7 @@ code {
   width: 99%;
   float: left;
   box-sizing: border-box; }
-.space	{ 
+.space	{
   margin: 1%;}
 
 
@@ -391,7 +391,7 @@ th,
 td {
   padding: 12px 15px;
   text-align: left;
-  
+
 }
 th:first-child,
 td:first-child {
@@ -429,7 +429,8 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 2.5rem; }
+  margin-bottom: 1.5rem;
+}
 
 
 /* Utilities
@@ -468,7 +469,7 @@ hr {
 
 /* Images
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-img { 
+img {
   margin: auto;
   display: block;
   max-width: 100%;
