show the fun thumbnails!

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -7,7 +7,7 @@
 <!-- Facebook tags -->
     <meta property="og:title" content="{% if page.name %}{{page.name}}{% else %}plotly{% endif %}"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="{% if page.imageurl %}{{site.staticurl}}{{page.imageurl}}{% else %}http://help.plot.ly/images/twitter-default.png{% endif %}">
+    <meta property="og:image" content="{% if page.imageurl %}{{site.staticurl}}{{page.imageurl}}{% else %}{% if page.thumbnail%}{{site.staticurl}}{{page.thumbnail}}{%else%}http://help.plot.ly/images/twitter-default.png{% endif %}{% endif %}">
     <meta property="og:description" content="{% if page.description %}{{page.description}}{% else %}Plotly is the easiest way to graph and share your data.{% endif %}"/>
     <meta property="og:url" />
     <meta property="fb:admins" content="1123751525"/>
@@ -18,7 +18,7 @@
     <meta name="twitter:title" content="{% if page.name %}{{page.name}}{% else %}plotly{% endif %}"/>
     <meta name="twitter:url" content="{% if page.permalink %}http://help.plot.ly{{page.permalink}}{% endif %}"/>
     <meta name="twitter:description" content="{% if page.description %}{{page.description}}{% else %}Plotly is the easiest way to graph and share your data.{% endif %}"/>
-    <meta name="twitter:image" content="{% if page.imageurl %}{{page.imageurl}}{% else %}http://help.plot.ly/images/twitter-default.png{% endif %}"/>
+    <meta name="twitter:image" content="{% if page.imageurl %}{{site.staticurl}}{{page.imageurl}}{% else %}{% if page.thumbnail%}{{site.staticurl}}{{page.thumbnail}}{%else%}http://help.plot.ly/images/twitter-default.png{% endif %}{% endif %}">
     <meta name="twitter:site" content="@plotlygraphs"/>
 
 <!-- Favicon -->
