add a lil padding to the code blocks

--- a/all_static/css/ipython-notebook-custom.css
+++ b/all_static/css/ipython-notebook-custom.css
@@ -1,3 +1,7 @@
+div.input_area>div.highlight>pre {
+  padding: 1px;
+}
+
 .cell div.input_area {
     border: 0;
     background: rgb(244, 244, 248);
