chart type examples

--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -14,18 +14,18 @@ background-color: #ffffff;
 code, kbd, pre, samp {
   font-family: monospace, monospace;
   font-size: 1em;
-  padding: 3px;}
+}
 
 code {
 	white-space: pre;
 }
 
- pre, blockquote {
+pre, blockquote {
     margin-bottom: 0;}
 
 iframe{
-	min-width: 100%;
-	border: 0px;
+	width: 100%;
+	border: 1px solid #ccc;
 }
 
 .border{
