--- a/all_static/css/base.css
+++ b/all_static/css/base.css
@@ -31,6 +31,13 @@ code {
   white-space: normal;
 }
 
+div.highlight {
+  border: 1px solid #ccc;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  background-color: white;
+}
+
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -141,8 +148,8 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   font-weight: 300;
 }
 h1 { font-size:48px; line-height: 49px;  letter-spacing: -0.15rem; color: #447adb;}
