--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -36,7 +36,7 @@ CONTAINER
   position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 20px 40px;
+  padding: 3px 40px; /* TODO: does this fuck up the other pages?*/
   box-sizing: border-box;
 }
 
